fixes and continued documentation
